--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Simon</title>
     <link rel="stylesheet" href="styles.css" />
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/sweetalert2@11.26.3/dist/sweetalert2.min.css"
+    />
   </head>
 
   <body>
@@ -22,8 +26,9 @@
         <div type="button" id="blue" class="btn blue"></div>
       </div>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.26.3/dist/sweetalert2.all.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="./alert.js"></script>
 
     <script src="./game.js"></script>
   </body>
